移植到 Minecraft 1.20.1（Forge 47）
采用分支按版本方案，从 main 开出 1.20.1 分支。1.20.1 无
NeoForge，目标加载器为 MinecraftForge 47.4.23，构建插件换成
net.neoforged.moddev.legacyforge，Java 21 降为 17。

主要 API 漂移处理：
- 注册：DeferredHolder→RegistryObject，按 ForgeRegistries 创建
  DeferredRegister；菜单类型用 IForgeMenuType.create
- 锻造配方：1.20.1 无 SmithingRecipeInput/RecipeHolder，
  SmithingRecipe 直接匹配 Container；onRemove 提升为 public；
  BlockEntity 存档走 ContainerHelper 的 NonNullList 重载
- 客户端：屏幕注册改用 FMLClientSetupEvent + MenuScreens.register，
  @Mod.EventBusSubscriber 挂 MOD 总线；主类改为无参构造，事件总线
  取自 FMLJavaModLoadingContext（Forge 47 约定）
- mods.toml 按 Forge 格式（modId=forge，mandatory=true）；
  mod 版本号加 MC 后缀（1.1.1+1.20.1）

1.20.1 侧 API 写法参考了 AnvilCraft 1.4.1-pre-release.1
（LGPL-3.0，见 NOTICE 出处说明）。